@@ -75,6 +75,7 @@
     <ownedOperation name="mod" type="//@oclInteger">
       <ownedParameter name="i" type="//@oclInteger"/>
     </ownedOperation>
+    <ownedOperation name="toString" type="//@oclString"/>
   </oclInteger>
   <oclReal name="Real" superType="//@oclAny" kind="Real">
     <ownedOperation name="-" type="//@oclReal"/>
@@ -124,10 +125,10 @@
     <ownedOperation name="asSet">
       <genericType xsi:type="pivot:ComplexGenericType" unboundType="//@oclSet">
         <typeArgument>
-          <genericType xsi:type="pivot:ParameterGenericType"/>
+          <genericType xsi:type="pivot:ParameterGenericType" typeParameter="//@oclAny/@ownedOperation.2/@ownedTypeParameter.0"/>
         </typeArgument>
       </genericType>
-      <ownedTypeParameter name="T"/>
+      <ownedTypeParameter name="E"/>
     </ownedOperation>
     <ownedOperation name="allInstances" static="true">
       <genericType xsi:type="pivot:ComplexGenericType" unboundType="//@oclSet">
@@ -135,11 +136,11 @@
           <genericType xsi:type="pivot:ParameterGenericType" typeParameter="//@oclAny/@ownedOperation.3/@ownedTypeParameter.0"/>
         </typeArgument>
       </genericType>
-      <ownedTypeParameter name="T"/>
+      <ownedTypeParameter name="E"/>
     </ownedOperation>
     <ownedOperation name="oclAsType">
       <genericType xsi:type="pivot:ParameterGenericType" typeParameter="//@oclAny/@ownedOperation.4/@ownedTypeParameter.0"/>
-      <ownedTypeParameter name="T"/>
+      <ownedTypeParameter name="E"/>
       <ownedParameter name="typespec">
         <genericType xsi:type="pivot:ComplexGenericType" unboundType="//@oclType">
           <typeArgument>
@@ -171,13 +172,13 @@
           <genericType xsi:type="pivot:ParameterGenericType" typeParameter="//@oclAny/@ownedOperation.10/@ownedTypeParameter.0"/>
         </typeArgument>
       </genericType>
-      <ownedTypeParameter name="T"/>
+      <ownedTypeParameter name="E"/>
     </ownedOperation>
   </oclAny>
   <oclVoid name="OclVoid" superType="//@oclAny"/>
   <oclInvalid name="OclInvalid" superType="//@oclAny"/>
   <oclType name="OclType" superType="//@oclAny">
-    <ownedTypeParameter name="T"/>
+    <ownedTypeParameter name="E"/>
     <ownedOperation name="=" type="//@oclBoolean">
       <ownedParameter name="object">
         <genericType xsi:type="pivot:ComplexGenericType" unboundType="//@oclType">
